--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,6 +1,6 @@
 {
   "projectName": "vue-player-tool",
-  "projectOwner": "aditya",
+  "projectOwner": "suiyang1714",
   "repoType": "github",
   "repoHost": "https://github.com",
   "files": [
